--- a/automanager/pom.xml
+++ b/automanager/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>automanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>automanager</name>
-	<description>Micro-servico para cadastro dos dados do cliente</description>
+	<description>Projeto para a atividade II</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -53,6 +53,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 	</dependencies>
 
