--- a/automanager/pom.xml
+++ b/automanager/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>automanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>automanager</name>
-	<description>Micro-servico para cadastro dos dados do cliente</description>
+	<description>Projeto para a atividade I</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
