--- a/automanager/src/main/resources/application.properties
+++ b/automanager/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql: true
 
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
+
+jwt.secret = WPzTonB2KOFwL_BxuwKc4KfMHGmecvgTUL5L9DC16TI
+jwt.expiration = 600000
